[package]
name = "wlqrkrhtlvek"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "My left army days"
repository = "https://github.com/cho0h5/wlqrkrhtlvek"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
